--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,7 +12,8 @@ environment:
 build_script:
  - go version
  - go get github.com/fsnotify/fsnotify
- - go test -v -race ./...
+ - go test  ./ ./config ./dummy_glog ./metrics ./server
+ - go test -v ./tailer
 
 test: off
 
