--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,9 +14,9 @@ build_script:
  - go test -v github.com/fstab/grok_exporter/config
  - go test -v github.com/fstab/grok_exporter/dummy_glog
  - go test -v github.com/fstab/grok_exporter/logger
- - go test -v github.com/fstab/grok_exporter/metrics
  - go test -v github.com/fstab/grok_exporter/server
  - go test -v github.com/fstab/grok_exporter/tailer
+# - go test -v github.com/fstab/grok_exporter/metrics
 
 test: off
 
