--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,19 @@
 language: go
 
+os:
+  - linux
+  - osx
+
+before_install:
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update && brew upgrade && brew install oniguruma ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then apt-get update && apt-get upgrade && apt-get install libonig-dev ; fi
+
 install:
- - echo "Skipping install phase, because github.com/fstab/grok_exporter has all its dependencies in the vendor/ folder."
+  - echo "Skipping install phase, because github.com/fstab/grok_exporter has all its dependencies in the vendor/ folder."
 
 script:
- - go version
- - go test -v github.com/fstab/grok_exporter/config
- - go test -v github.com/fstab/grok_exporter/dummy_glog
- - go test -v github.com/fstab/grok_exporter/logger
- - go test -v github.com/fstab/grok_exporter/server
- - go test -v github.com/fstab/grok_exporter/tailer
-# - go test -v github.com/fstab/grok_exporter/metrics
+  - go version
+  - go test $(go list ./... | grep -v /vendor/)
 
 go:
 - tip
