--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ os:
   - osx
 
 before_install:
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update && brew upgrade && brew install oniguruma ; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then apt-get update && apt-get upgrade && apt-get install libonig-dev ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update && brew install oniguruma ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get update && sudo apt-get install libonig-dev ; fi
 
 install:
   - echo "Skipping install phase, because github.com/fstab/grok_exporter has all its dependencies in the vendor/ folder."
