--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,22 +1,71 @@
-version: "{build}"
+version:
+    "{build}"
 
-os: Windows Server 2012 R2
+os:
+    Windows Server 2012 R2
 
-clone_folder: c:\go\src\github.com\fstab\grok_exporter
+clone_folder:
+    C:\go\src\github.com\fstab\grok_exporter
 
 environment:
- PATH: c:\go\bin;%PATH%
- GOPATH: c:\go
- NOTIFY_TIMEOUT: 5s
+    PATH: c:\go\bin;C:\msys64\mingw64\bin;%PATH%
+    GOPATH: c:\go
+    CC: x86_64-w64-mingw32-gcc
+    CGO_ENABLED: 1
+    CGO_LDFLAGS: C:\msys64\mingw64\lib\libonig.a
 
-# TODO: github.com/fstab/grok_exporter/exporter needs the Oniguruma C library,
-# and the gcc toolchain for building it. Skip this for now and only test the
-# packaged that are independent of Oniguruma.
+# --------------------------------------------------------------------------
+# The install phase installs the Oniguruma library,
+# which is a dependency for building grok_exporter.
+# We use Cygwin and MinGW to cross-compile Oniguruma for Windows.
+# --------------------------------------------------------------------------
+
+install:
+
+    # Update the Cygwin environment
+
+    # Uncomment the following command to upgrade the cygwin packages:
+    # - C:\cygwin\setup-x86.exe -q -g
+    - C:\cygwin\bin\bash -lc "cygcheck -dc cygwin"
+
+    # Download the Oniguruma sources from Ubuntu
+
+    - cd C:\
+    - appveyor DownloadFile http://archive.ubuntu.com/ubuntu/pool/universe/libo/libonig/libonig_5.9.6.orig.tar.gz
+    - appveyor DownloadFile http://archive.ubuntu.com/ubuntu/pool/universe/libo/libonig/libonig_5.9.6-1.debian.tar.xz
+    - 7z x libonig_5.9.6.orig.tar.gz -so | 7z x -si -ttar > nul
+    - cd onig-5.9.6
+    - 7z x ..\libonig_5.9.6-1.debian.tar.xz -so | 7z x -si -ttar > nul
+    - git apply debian/patches/001-changes_build_sys.diff
+
+    # Compile Oniguruma using x86_64-w64-mingw32-gcc
+
+    - C:\cygwin\bin\bash -c "PATH='/usr/sbin:/usr/bin:/sbin:/bin' ./configure -v --host=x86_64-w64-mingw32 --prefix=/cygdrive/c/msys64/mingw64"
+    - C:\cygwin\bin\bash -c "PATH='/usr/sbin:/usr/bin:/sbin:/bin' make || true"
+    - C:\cygwin\bin\bash -c "PATH='/usr/sbin:/usr/bin:/sbin:/bin' mv '$(encdir)/.deps' enc"
+    - C:\cygwin\bin\bash -c "PATH='/usr/sbin:/usr/bin:/sbin:/bin' make"
+    - C:\cygwin\bin\bash -c "PATH='/usr/sbin:/usr/bin:/sbin:/bin' make install"
+
+# --------------------------------------------------------------------------
+# The build phase compiles and tests grok_exporter.
+# --------------------------------------------------------------------------
 
 build_script:
- - go version
- - go test -v github.com/fstab/grok_exporter/logger github.com/fstab/grok_exporter/tailer
+    - cd c:\go\src\github.com\fstab\grok_exporter
+    - go version
+    - go test github.com/fstab/grok_exporter
+    - go test github.com/fstab/grok_exporter/exporter
+    - go test github.com/fstab/grok_exporter/logger
+    - go test github.com/fstab/grok_exporter/tailer
+    - go install github.com/fstab/grok_exporter
+    - grok_exporter -version
 
-test: off
+    # Print the linked DLLs, so we can check that grok_exporter does not have
+    # a runtime dependency on Oniguruma.
+    - C:\cygwin\bin\bash -c "PATH='/usr/sbin:/usr/bin:/sbin:/bin' x86_64-w64-mingw32-objdump -p /cygdrive/c/go/bin/grok_exporter.exe | grep 'DLL Name:'"
 
-deploy: off
+test:
+    off
+
+deploy:
+    off
