--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -58,7 +58,7 @@ build_script:
     - go test github.com/fstab/grok_exporter/exporter
     - go test github.com/fstab/grok_exporter/tailer
     - go install github.com/fstab/grok_exporter
-    - C:\cygwin\bin\bash -c "cd /cygdrive/c/go/src/github.com/fstab/grok_exporter ; PATH='/usr/sbin:/usr/bin:/sbin:/bin' ./integration-test.sh"
+    - C:\cygwin\bin\bash -c "cd /cygdrive/c/go/src/github.com/fstab/grok_exporter ; PATH='/usr/sbin:/usr/bin:/sbin:/bin' ./integration-test-cygwin.sh"
 
     # Print the linked DLLs, so we can check that grok_exporter does not have
     # a runtime dependency on Oniguruma.
