--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ env:
   matrix:
     - ONIG_VERSION=5.9.6 MODE=STATIC
     - ONIG_VERSION=5.9.6 MODE=DYNAMIC
+    - ONIG_VERSION=6.7.0 MODE=STATIC
+    - ONIG_VERSION=6.7.0 MODE=DYNAMIC
     - ONIG_VERSION=DEFAULT
 
 before_install:
