update Oniguruma version

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,9 @@ os:
 env:
   matrix:
     - ONIG_VERSION=5.9.6 MODE=STATIC
-    - ONIG_VERSION=5.9.6 MODE=DYNAMIC
     - ONIG_VERSION=6.7.0 MODE=STATIC
-    - ONIG_VERSION=6.7.0 MODE=DYNAMIC
+    - ONIG_VERSION=6.9.2 MODE=STATIC
+    - ONIG_VERSION=6.9.2 MODE=DYNAMIC
     - ONIG_VERSION=DEFAULT
 
 before_install:
