--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -5,10 +5,10 @@ os:
     Windows Server 2012 R2
 
 clone_folder:
-    C:\go\src\github.com\fstab\grok_exporter
+    C:\grok_exporter
 
 environment:
-    PATH: c:\go\bin;C:\msys64\mingw64\bin;%PATH%
+    PATH: C:\go\bin;C:\msys64\mingw64\bin;%PATH%
     GOPATH: c:\go
     CC: x86_64-w64-mingw32-gcc
     CGO_ENABLED: 1
@@ -48,22 +48,13 @@ install:
 # --------------------------------------------------------------------------
 
 build_script:
-    - cd c:\go\src\github.com\fstab\grok_exporter
+    - cd c:\grok_exporter
     - git submodule update --init --recursive
     - set GO111MODULE=on
     - go version
-    - go test github.com/fstab/grok_exporter
-    - go test github.com/fstab/grok_exporter/config
-    - go test github.com/fstab/grok_exporter/config/v1
-    - go test github.com/fstab/grok_exporter/config/v2
-    - go test github.com/fstab/grok_exporter/exporter
-    - go test github.com/fstab/grok_exporter/oniguruma
-    - go test github.com/fstab/grok_exporter/tailer
-    - go test github.com/fstab/grok_exporter/tailer/fswatcher
-    - go test github.com/fstab/grok_exporter/tailer/glob
-    - go test github.com/fstab/grok_exporter/template
-    - go install github.com/fstab/grok_exporter
-    - C:\cygwin\bin\bash -c "cd /cygdrive/c/go/src/github.com/fstab/grok_exporter ; PATH='/usr/sbin:/usr/bin:/sbin:/bin' ./integration-test.sh"
+    - go test ./...
+    - go install
+    - C:\cygwin\bin\bash -c "cd /cygdrive/c/grok_exporter ; PATH='/usr/sbin:/usr/bin:/sbin:/bin' ./integration-test.sh"
 
     # Print the linked DLLs, so we can check that grok_exporter does not have
     # a runtime dependency on Oniguruma.
