Add json_lines webhook input format
fluent-bit allows two JSON log formats: a stream of JSON objects not separated at all,
and one with a single JSON object per line. None of those was compatible with
grok_exporter so far. This change implements the json_lines format that is compatible
with fluent-bit.

--- a/example/config_logstash_http_input_ipv6.yml
+++ b/example/config_logstash_http_input_ipv6.yml
@@ -27,6 +27,14 @@ input:
   # json_single: Webhook POST body is a single json log entry.  Log entry
   #   text is selected from the value of a json key determined by
   #   webhook_json_selector.
+  # json_lines: Webhook POST body contains multiple json log entries, with
+  #   newline-separated log lines holding an individual json object. JSON
+  #   object itself may not contain newlines. For example:
+  #   example:
+  #       { app="foo", stage="prod", log="example log message" }
+  #       { app="bar", stage="dev", log="another line" }
+  #   Log entry text is selected from the value of a json key determined
+  #   by webhook_json_selector.
   # json_bulk: Webhook POST body contains multiple json log entries.  The
   #   POST body envelope must be a json array "[ <entry>, <entry> ]".  Log
   #   entry text is selected from the value of a json key determined by
