--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,4 +1,4 @@
-name: Build and scan
+name: Build
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
@@ -10,72 +10,19 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
-    env:
-      VERSION: latest
-      EXPORTER_NAME: grok-exporter
+    strategy:
+      matrix:
+        docker: ['ubi']
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    name: ${{ matrix.docker }}
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          submodules: recursive
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      - name: Login to Artifactory
-        uses: docker/login-action@v1 
-        with:
-          registry: artifactory.internal.sysdig.com
-          username: david.lorite@sysdig.com
-          password: ${{ secrets.ARTI_TOKEN }}
-      - name: Increase version and build
-        run: |
-          docker pull artifactory.internal.sysdig.com/$EXPORTER_NAME:$VERSION
-          export RELEASE=$(docker inspect --format '{{ index .Config.Labels "release" }}' artifactory.internal.sysdig.com/$EXPORTER_NAME:$VERSION)
-          docker build --label release=$RELEASE -f ./Dockerfile -t $EXPORTER_NAME:$VERSION --target ubi .
-          docker build --label version=$RELEASE -f ./Dockerfile -t $EXPORTER_NAME:$VERSION-ubi --target ubi .  
-
-      - name: Scan local image
-        id: scan-local
-        uses: sysdiglabs/scan-action@v3
-        with:
-          image-tag: "grok-exporter:latest"
-          sysdig-secure-token: ${{ secrets.SYSDIG_SECURE_TOKEN }}
-          ignore-failed-scan: true
-          input-type: docker-daemon
-          run-as-user: root
-      - name: Scan local image 2
-        id: scan-local2
-        uses: sysdiglabs/scan-action@v3
-        with:
-          image-tag: "grok-exporter:latest-ubi"
-          sysdig-secure-token: ${{ secrets.SYSDIG_SECURE_TOKEN }}
-          ignore-failed-scan: true
-          input-type: docker-daemon
-          run-as-user: root
-
-      - name: Sarif report
-        uses: github/codeql-action/upload-sarif@v1  
-        if: always()
-        with:
-          sarif_file: ${{ steps.scan-local.outputs.sarifReport }}
-
-      - name: Change the tag of the image
-        run: |
-          docker tag $EXPORTER_NAME:$VERSION artifactory.internal.sysdig.com/$EXPORTER_NAME:$VERSION
-          docker tag $EXPORTER_NAME:$VERSION-ubi artifactory.internal.sysdig.com/$EXPORTER_NAME:$VERSION-ubi
-
-      - name: Push the image
-        run: |
-          docker push artifactory.internal.sysdig.com/$EXPORTER_NAME:$VERSION
-          docker push artifactory.internal.sysdig.com/$EXPORTER_NAME:$VERSION-ubi
-
-      - name: Fake Upload master to Quay.io
-        uses: fjogeleit/http-request-action@master
-        with:
-          url: 'https://sysdig-jenkins.internal.sysdig.com/view/Integrations/job/integrations-grok-exporter/buildWithParameters?token=${{ secrets.JENKINS_PROMCAT_LAUNCH_TOKEN }}&EXPORTER=grok-exporter&DRY_RUN=true'
-          method: 'POST'
-          username: david.lorite@sysdig.com
-          password: ${{ secrets.JENKINS_PROMCAT_API_TOKEN }}
+    - name: build
+      uses: sysdiglabs/exporter-builder@v0.2
+      with:
+        exporter: grok-exporter
+        artifactory_token: ${{ secrets.ARTI_TOKEN }}
+        artifactory_username: david.lorite@sysdig.com
+        tag_name: dev
+        target: ${{ matrix.docker }}
+        repository: artifactory.internal.sysdig.com
