Remove scratch from release action

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,7 +6,7 @@ jobs:
   buildDockerImage:
     strategy:
       matrix:
-        docker: ['scratch','ubi']
+        docker: ['ubi']
     name: Build docker image ${{ matrix.docker }}
     runs-on: ubuntu-latest
     steps:
