--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -17,7 +17,7 @@ jobs:
     - name: Upload master to Quay.io
       uses: fjogeleit/http-request-action@master
       with:
-        url: 'https://sysdig-jenkins.internal.sysdig.com/view/Integrations/job/integrations-grok-exporter/buildWithParameters?token=${{ secrets.JENKINS_PROMCAT_LAUNCH_TOKEN }}&EXPORTER=grok-exporter&DRY_RUN=false'
+        url: 'https://sysdig-jenkins.internal.sysdig.com/view/Integrations/job/integrations-grok-exporter/buildWithParameters?token=${{ secrets.JENKINS_PROMCAT_LAUNCH_TOKEN }}&EXPORTER=grok-exporter&DRY_RUN=false&SCRATCH=false'
         method: 'POST'
         username: david.lorite@sysdig.com
         password: ${{ secrets.JENKINS_PROMCAT_API_TOKEN }}
