--- a/.github/workflows/go-linux.yml
+++ b/.github/workflows/go-linux.yml
@@ -10,19 +10,22 @@ on:
     branches: [ "master" ]
 
 jobs:
-
   build:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-23.04, ubuntu-22.04, ubuntu-20.04]
+        go-version: [1.20, 1.19, 1.18]
+    runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
 
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.20'
+        go-version: ${{matrix.go-version }}
 
     - name: Build
       run: go build -v ./...
 
     - name: Test
-      run: go test -v ./...
+      run: go test -failfast -count=1 -v ./...
