--- a/.github/workflows/go-linux.yml
+++ b/.github/workflows/go-linux.yml
@@ -24,6 +24,9 @@ jobs:
       with:
         go-version: ${{matrix.go-version }}
 
+    - name: Pre-Setup
+      run: scripts/install-oniguruma.sh
+
     - name: Build
       run: go build -v ./...
 
